# GONNECT

./: .gitignore  TCGA_1k_16-4.py  container_pixi.def  experiment_log  main.py  pixi.toml  pyproject.toml
analysis/: latent_space.py
data/: DAGGenerator.py  DummyTerm.py  GO_preprocessing.py  ProxyTerm.py  TCGA_complete.py  dag_analysis.py  data_preprocessing.py  generate_masks.py  go_preprocessing.py  test_GO_preprocessing.py  test_go_preprocessing.py
experiments/: TCGA_1k_8-4.py  fully_connected.py  mini_dag_25-3.py  sparse_vs_dense.py  top1k_17-3.py  top1k_27-2.py  train_bp_100.py
model/: AE_vanilla.py  Autoencoder.py  Coder.py  Decoder.py  Encoder.py  OldDecoder.py  OldEncoder.py  SparseLinear.py  VAE_vanilla.py  build_model.py
slurm/: AE_1.0.0_decoder.sh  AE_1.0.0_none.sh  AE_1.0.1_both.sh  AE_1.0.1_decoder.sh  AE_1.0.1_none.sh  AE_1.0.sh  AE_1.0_both.sh  AE_1.0_decoder.sh  AE_1.0_encoder.sh  AE_1.0_none.sh  AE_1.1.0_both.sh  AE_1.1.0_decoder.sh  AE_1.1.0_encoder.sh  AE_1.1_both.sh  AE_1.1_decoder.sh  test_daic_setup.sh  test_pixi.sh  test_python.sh  test_python_with_gpu.sh
src/: AE_1.0.0_both.py  AE_1.0.0_encoder.py  AE_1.0.0_none.py  AE_1.0.1_both.py  AE_1.0.1_decoder.py  AE_1.0.1_encoder.py  AE_1.0.1_none.py  AE_1.0_both.py  AE_1.0_decoder.py  AE_1.0_encoder.py  AE_1.0_none.py  AE_1.1_decoder.py  AE_1.1_encoder.py  AE_2.0.0_both.py  AE_2.0.0_decoder.py  AE_2.0.0_encoder.py  AE_2.0.0_none.py  AE_2.0.3_both.py  AE_2.1.0_both.py  AE_2.1.0_decoder.py  AE_2.1.0_encoder.py  AE_2.1.4_both.py  AE_2.1.6_both.py  AE_2.2.0_both.py  AE_2.2.0_decoder.py  (+38 more)
(+142 files in other folders)
